cloudflare pages stuff and consistency shit

--- a/404.html
+++ b/404.html
@@ -5,12 +5,11 @@
     <title>404 NOT FOUND</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
     <meta property="og:title" content="That page doesn't exist!">
     <meta property="og:description" content="How did we get here?">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/claire/Dizzy.png" type="image/png">
-    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
+    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="https://spax.zone/css/experimental.css">
   </head>
   <body>
@@ -24,7 +23,7 @@
       (Just kidding no I'm not).
     </article>
     <article who="claire" emotion="sigh">
-      Anyways, Spax told me to direct you to his <a href=https://spax.zone/html/main>main page</a>.
+      Anyways, Spax told me to direct you to his <a href="/index.html">main page</a>.
     </article>
     <article who="claire" emotion="neutral">
       See you around?
