--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/yoki/Neutral.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/DEPalldialogue"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
       <!--dreams really do come true-->
