--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="My create project from 2022.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/MojoArrowAdvice"/>
+    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
     <iframe
