--- a/html/discord.html
+++ b/html/discord.html
@@ -3,8 +3,8 @@
   <head>
     <title>teleporting to spax discord</title>
     <meta http-equiv="refresh" content="0;url=https://discord.gg/nsKxQvBY8P"/>
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
     <article who="claire" emotion="neutral">
