--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="See if I'm currently at school or not!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/isspaxatschool"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
       .dnd-gray {
         color: #737e8c;
