--- a/html/main.html
+++ b/html/main.html
@@ -2,54 +2,41 @@
 <html manifest="manifest" lang="en-US">
 <head>
   <meta charset="utf-8">
-  <title>Spax's Site</title>
+  <title>spax.zone</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#306850">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
   <meta name="description" content="a webbed site for a webbed creachure">
   <meta property="og:title" content="spax.zone">
   <meta property="og:description" content="a webbed site for a webbed creachure">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-  <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
+  <link rel="icon" href="/images/icons/Smirk_Circle.png">
   <!--bootstrap (remove this in the future)   remved :thumbsup: -marbelynrye -->
-  <link rel="canonical" href="https://spax.zone/html/main"/>
-  <link rel="stylesheet" href="/css/experimental.css"/>
+  <link rel="stylesheet" href="/css/experimental.css">
 </head>
 <body>
-    <article>
-      <a href="../html/sitelist">Click here</a> to see my full site list!<br>
-      -Spax
-    </article>
-    <article who="claire" emotion="neutral">
-      Hey nerds. It's me, Claire.
-    </article>
-    <article who="claire" emotion="happy">
-      I am now on a website. Woo!
-    </article>
-    <article who="claire" emotion="sigh">
-      Anyways it's time to refactor pretty much the entire site.
-    </article>
-    <article who="claire" emotion="look">
-      Spax hasn't worked on it in over two years.
-    </article>
-    <article who="spax" emotion="look">
-      True...
-    </article>
-    <article who="spax" emotion="happy">
-      But keep an eye out for some new changes in the next few weeks!
-    </article>
-    <!--
-    <script>
-      document.querySelectorAll("article")
-        .forEach(article => 
-          article.style.setProperty(
-            "--textbox-data",
-            `url(../images/faces/${article.getAttribute('who')}/${article.getAttribute('emotion')}.png)`
-          )
-        );
-    </script>
-    -->
+  <article>
+    <a href="./sitelist.html">Click here</a> to see my full site list!<br>
+    -Spax
+  </article>
+  <article who="claire" emotion="neutral">
+    Hey nerds. It's me, Claire.
+  </article>
+  <article who="claire" emotion="happy">
+    I am now on a website. Woo!
+  </article>
+  <article who="claire" emotion="sigh">
+    Anyways it's time to refactor pretty much the entire site.
+  </article>
+  <article who="claire" emotion="look">
+    Spax hasn't worked on it in over two years.
+  </article>
+  <article who="spax" emotion="look">
+    True...
+  </article>
+  <article who="spax" emotion="happy">
+    But keep an eye out for some new changes in the next few weeks!
+  </article>
 </body>
 </html>
