--- a/html/pt-br.html
+++ b/html/pt-br.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="hi Luiz">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/pt-br"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
     <article who="claire" emotion="happy">
