--- a/html/spaxDay2.html
+++ b/html/spaxDay2.html
@@ -12,26 +12,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
     <meta name="description" content="Happy Birthday Spax 2">
     <meta property="og:title" content="Spax's Site">
     <meta property="og:description" content="Happy Birthday Spax 2">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png"></link>
+    <link rel="icon" href="https://spax.zone/images/icons/Smirk_Circle.png">
     <!--bootstrap-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <script src="/js/bootstrap.min.js"></script>
     <!---->
-    <link rel="stylesheet" href="/css/styles.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/main"/>
+    <link rel="stylesheet" href="/css/styles.css" type="text/css">
     <title>Spax's Site</title>
   </head>
   <body>
     <div id="bg">
       <div class="text-box flex-container unselectable">
         <div>
-          <a href="/html/sitelist">Click here</a> to see my full site list!<br>
+          <a href="./sitelist.html">Click here</a> to see my full site list!<br>
           -Spax
         </div>
       </div>
