--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
-    <link rel="me" href="https://chitter.xyz/@spax"></link>
+    <link rel="me" href="https://chitter.xyz/@spax">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
     <meta property="og:title" content="spax.zone">
     <meta property="og:description" content="a webbed site for a webbed creachure">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/index"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <meta http-equiv="Refresh" content="0; url='html/main'"/>
     <title>Redirect Go brrrrr</title>
   </head>
