--- a/tests/animal-gender-bodypart/index.html
+++ b/tests/animal-gender-bodypart/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Animal Gender Bodypart</title>
-  <link rel="icon" href="./icon.png">
-  <link rel="stylesheet" href="./styles.css" type=text/css>
+  <link rel="stylesheet" href="./styles.css" type="text/css">
   <script src="./agbplist.js"></script>
   <script src="./script.js" defer></script>
+  <link rel="icon" href="/tests/animal-gender-bodypart/icon.png">
 </head>
 <body>
   <h1 id="title">Animal Gender Bodypart</h1>
