--- a/html/alldepfaces.html
+++ b/html/alldepfaces.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="A collection of all the face sprites used in Dweller's Empty Path!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css"/>
-    <link rel="canonical" href="https://spax.zone/html/alldepfaces"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css">
   </head>
   <body>
     <!-- the regex that made this possible:
