--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/allspaxfaces"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
     <article who="spax" emotion="blush">
