--- a/html/changelog.html
+++ b/html/changelog.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="Manually documenting major changes to the site.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/changelog"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
     <article style="text-align: center;">
@@ -36,7 +35,7 @@
     </article>
     <article>
       <u>Wednesday, Mar 9, 2022</u><br>
-      - Added <a href="/html/MojoArrowAdvice" target="_blank">my create project</a> to the site (was a skeleton page at first because I didn't know how to embed the program)
+      - Added <a href="./MojoArrowAdvice.html" target="_blank">my create project</a> to the site (was a skeleton page at first because I didn't know how to embed the program)
     </article>
     <article>
       <u>Sunday, Mar 6, 2022</u><br>
@@ -55,14 +54,14 @@
     <article>
       <u>Wednesday, Mar 2, 2022</u><br>
       - ADDED MORE .DS_STORE FILES TO THE .GITIGNORE<br>
-      - Added the "<a href="/html/DEPalldialogue" target="_blank">All DEP Dialogue</a>" page as a gift to the DEP community<br>
+      - Added the "<a href="./DEPalldialogue.html" target="_blank">All DEP Dialogue</a>" page as a gift to the DEP community<br>
       &nbsp;&nbsp; • I didn't add any text boxes yet; this was just making the site
     </article>
     <article>
       <u>Tuesday, Mar 1, 2022</u><br>
       - Fixed some of the linked webpages not working in a few of the files<br>
       - My never-ending journey to make the text boxes the closest to what it looks like in the game continues with a text align fix<br>
-      - Updated the <a href="/html/isspaxatschool" target="_blank">Is Spax At School</a> site that removed the not working javascript and added a live time for me (thanks to the MRC3 timezone code I wrote) and included an "I do this at this time" key at the bottom. I will one day come back to fix the javascript.<br>
+      - Updated the <a href="./isspaxatschool.html" target="_blank">Is Spax At School</a> site that removed the not working javascript and added a live time for me (thanks to the MRC3 timezone code I wrote) and included an "I do this at this time" key at the bottom. I will one day come back to fix the javascript.<br>
       &nbsp;&nbsp; • Added discord's status colors in the CSS<br>
       - Added a file that makes it so the .html extension doesn't need to be in the url for the site to work
     </article>
@@ -84,12 +83,12 @@
       <u>Wednesday, Feb 16, 2022</u><br>
       - Correctly implemented the background scroll parallax with help from HeySora :tada:<br>
       - Fixed some of page metatada because I forgot to change it when copy/pasting code to make new webpages<br>
-      - Added a <a href="/html/mrc3timezones" target="_blank">timezone</a> page for my team participating in MRC3<br>
+      - Added a <a href="./mrc3timezones.html" target="_blank">timezone</a> page for my team participating in MRC3<br>
       - Fixed the weird characters that didn't translate ISO to UTF-8 correctly when copy-pasting stuff in the index.html
     </article>
     <article>
       <u>Tuesday, Feb 15, 2022</u><br>
-      - Added a "<a href="/html/contactme" target="_blank">contact me</a>" page when I'm supposedly at school (this will probably never get used)<br>
+      - Added a "<a href="./contactme.html" target="_blank">contact me</a>" page when I'm supposedly at school (this will probably never get used)<br>
       - Tried to add background parallax
     </article>
     <article>
