--- a/html/fanart.html
+++ b/html/fanart.html
@@ -8,15 +8,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Spax, SpiritAxolotl, spiritaxolotl, spirit, axolotl, axolotls, youtube">
     <meta name="description" content="A collection of all official/fanworks of my characters &quot;Spax&quot; and &quot;Nahua&quot;.">
     <meta property="og:title" content="Spax Fanart">
     <meta property="og:description" content="A collection of all official/fanworks of my characters &quot;Spax&quot; and &quot;Nahua&quot;.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/art"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
     <article who="spax" emotion="smirk">
