--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -12,8 +12,7 @@
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">-->
     <meta property="og:type" content="website">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/nahua-ref-sheet">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <style>
       /* thank you cefqrn for the grid shenanigans */
       #colors {
