--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -11,9 +11,8 @@
     <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="/css/experimental.css" type=text/css>
-    <link rel="canonical" href="https://spax.zone/html/plannedchanges"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
     <article>
@@ -95,7 +94,7 @@
       Cya!
     </article>
     <article>
-      (<a href="/html/main">Click here</a> to go back to the main page!)
+      (<a href="./main.html">Click here</a> to go back to the main page!)
     </article>
   </body>
 </html>
