--- a/redirects/imsorry.html
+++ b/redirects/imsorry.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="https://spax.zone/css/styles.css" type=text/css>
-    <link rel="canonical" href="imsorry"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="https://spax.zone/css/styles.css" type="text/css">
     <meta http-equiv="Refresh" content="0; url='https://www.youtube.com/watch?v=dQw4w9WgXcQ'"/>
     <title>Redirect Go brrrrr</title>
   </head>
