--- a/redirects/ratspin.html
+++ b/redirects/ratspin.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
-    <link rel="stylesheet" href="https://spax.zone/css/experimental.css" type=text/css>
-    <link rel="canonical" href="ratspin"/>
+    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="stylesheet" href="/css/experimental.css" type="text/css">
     <meta http-equiv="Refresh" content="0; url='https://cdn.discordapp.com/attachments/1001605563999850559/1009287729747595384/optimized-spinning-rat.gif'"/>
     <title>Redirect Go brrrrr</title>
   </head>
