change instances of main.html to index.html

--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -94,7 +94,7 @@
       Cya!
     </article>
     <article>
-      (<a href="./main.html">Click here</a> to go back to the main page!)
+      (<a href="./index.html">Click here</a> to go back to the main page!)
     </article>
   </body>
 </html>
