--- a/html/pt-br.html
+++ b/html/pt-br.html
@@ -23,7 +23,7 @@
       Ç Ã Â Á É Ó Í Ú
     </article>
     <article>
-      (And <a href="/html/main.html">click here</a> to go back to the main page!)
+      (And <a href="./index.html">click here</a> to go back to the main page!)
     </article>
   </body>
 </html>
