--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -30,7 +30,7 @@
     </article>
     <br>
     <article>
-      <a href="./main.html">Main Page</a><br>
+      <a href="./index.html">Main Page</a><br>
       The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
     </article>
     <!-- commenting out since it is severely outdated. you can check it out if you've inspected the page lol
