--- a/html/spaxDay.html
+++ b/html/spaxDay.html
@@ -729,7 +729,7 @@ haha now it's edited by spax:)
             setTimeout(() => {
               madeTextBox.setAttribute("data-disabled", "false");
               madeTextBox.style.animation = "none";
-              madeTextInBox.innerHTML = `(<a href="./main.html">Click here</a> to go back to the main page!)`;
+              madeTextInBox.innerHTML = `(<a href="./index.html">Click here</a> to go back to the main page!)`;
             }, 125);
             
             setTimeout(() => {
