possible embed fix

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Nahua Ref Sheet">-->
     <!--<meta property="og:description" content="Nahua's ref sheet!">-->
     <meta property="og:image" content="https://spax.zone/images/art/nahua-bananas-refsheet.png" type="image/png">
+    <meta property="twitter:card" content="summary_large_image">
     <meta property="og:type" content="website">
     <link rel="icon" href="/images/icons/Smirk_Circle.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
