--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -82,7 +82,10 @@
       </div>
     </article>
     <article type="short">
-      Last updated: August 15th, 2024
+      Last updated: August 15th, 2024<br>
+    </article>
+    <article type="short">
+      (And <a href="./index.html">click here</a> to go to the main page!)
     </article>
     <script>
       async function writeClipboardText(text) {
