--- a/html/plannedchanges.html
+++ b/html/plannedchanges.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="All of the changes that I'm planning on making for the website soon!">
-    <meta property="og:title" content="All Spax DEP Face Sprites">
+    <meta property="og:title" content="Spax's (VERY OUTDATED) Planned Changes">
     <meta property="og:description" content="All of the changes that I'm planning on making for the website soon!">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
@@ -93,7 +93,7 @@
     <article who="spax" emotion="happy">
       Cya!
     </article>
-    <article>
+    <article type="short">
       (<a href="./index.html">Click here</a> to go back to the main page!)
     </article>
   </body>
