--- a/html/changelog.html
+++ b/html/changelog.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#306850">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Manually documenting major changes to the site.">
-    <meta property="og:title" content="All Spax DEP Face Sprites">
+    <meta property="og:title" content="Spax's (VERY OUTDATED) Site Changelog">
     <meta property="og:description" content="Manually documenting major changes to the site.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/spax/Smirk.png" type="image/png">
