--- a/html/pt-br.html
+++ b/html/pt-br.html
@@ -22,7 +22,7 @@
       ç ã â á é ó í ú <br>
       Ç Ã Â Á É Ó Í Ú
     </article>
-    <article>
+    <article type="short">
       (And <a href="./index.html">click here</a> to go back to the main page!)
     </article>
   </body>
