--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -11,124 +11,10 @@
     <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://spax.zone/images/faces/yoki/Neutral.png" type="image/png">
-    <link rel="icon" href="/images/icons/Smirk_Circle.png">
+    <link rel="icon" href="/images/faces/yoki/Neutral.png">
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
-      <!--dreams really do come true-->
-      <article who="spax" emotion="smirk">
-        Yo! It's me! Spax!
-      </article>
-      <article who="spax" emotion="neutral">
-        I've been in the DEP server for over a year and a half now, and I've been wanting to give back to the community for quite awhile now.
-      </article>
-      <article who="spax" emotion="woo">
-        So now I'm making a webpage that hosts all of DEP's dialogue as seen in-game!
-      </article>
-      <article who="spax" emotion="look">
-        This is still currently a work in progress, and it's going to take a lengthy amount of time to port the dialogue over 100%.
-      </article>
-      <article who="spax" emotion="smirk">
-        But at least I'm doing <i>something</i> for it. Think of it as a passion project for me!
-      </article>
-      <article who="spax" emotion="look">
-        (Much like how I made a .ttf file of DEP's font too a few weeks ago.)
-      </article>
-      <article who="spax" emotion="blush">
-        Well, I hope you enjoy!
-      </article>
-      <article who="aimottle" emotion="unsure">
-        Spax is still working on the site... come back here later when it updates.
-      </article>
-      <article>
-        Index:<br>
-        <a href="#intro-text">Intro</a>
-      </article>
-      <article id="intro-text" type="title">
-        Intro
-      </article>
-      <article type="description">
-        After the player starts the game, the screen becomes dark green and nightmare.ogg starts playing. Text appears.
-      </article>
-      <article>
-        ......................
-      </article>
-      <article>
-        ........My head.....
-      </article>
-      <article>
-        .............It hurts..........
-      </article>
-      <article>
-        All of these voices..and...<br>
-        All of these faces are flooding into my head......
-      </article>
-      <article>
-        Who.... are they...?
-      </article>
-      <article>
-        Ah...................... 
-      </article>
-      <article>
-        It feels like....<br>
-        My head’s gonna burst open.......
-      </article>
-      <article>
-        Someone.......<br>
-        Make it stop...........
-      </article>
-      <article type="description">
-        A large eye appears in front of the player, and disappears within a few seconds.<br>
-        It then fades into a view of a person in bed, suddenly waking up.
-      </article>
-      <article who="yoki" emotion="surprised">
-        .............!!!
-      </article>
-      <article type="description">
-        She blinks and sits up.
-      </article>
-      <article who="yoki" emotion="neutral">
-        ...............
-      </article>
-      <article who="yoki" emotion="disheartened">
-        ....Another nightmare..
-      </article>
-      <article type="description">
-        She then lies in bed again, staring at the ceiling.
-      </article>
-      <article who="yoki" emotion="disheartened">
-        I’ve been getting a lot of these lately....
-      </article>
-      <article who="yoki" emotion="disheartened">
-        ...
-      </article>
-      <article who="yoki" emotion="annoyed">
-        ..I have a feeling HE’s behind this one again.
-      </article>
-      <article who="yoki" emotion="annoyed">
-        ........
-      </article>
-      <article who="yoki" emotion="think">
-        I don’t think I can fall back asleep after THAT.
-      </article>
-      <article who="yoki" emotion="annoyed">
-        ...
-      </article>
-      <article type="description">
-        She starts getting out of bed.
-      </article>
-      <article who="yoki" emotion="look">
-        Well...<br>
-        No use laying around in bed.
-      </article>
-      <article type="description">
-        A portrait shot of the character pans up.
-      </article>
-      <article who="yoki" emotion="neutral">
-        Guess I’ll go for a walk to clear my mind a bit.
-      </article>
-      <article type="description">
-        [End of Event]
-      </article>
+    <!--this page is gonna be replaced by /js/buildDEPdialogue.js when the site is built-->
   </body>
 </html>
