--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -11,6 +11,19 @@
   <meta property="og:image" content="https://spax.zone/images/faces/yoki/Neutral.png" type="image/png">
   <link rel="icon" href="/images/faces/yoki/Neutral.png">
   <link rel="stylesheet" href="/css/experimental.css" type="text/css">
+  <style>
+    article {
+      white-space: nowrap;
+    }
+    @media only screen and (max-width: 600px) {
+      article {
+        white-space: wrap;
+      }
+      br {
+        display: none;
+      }
+    }
+  </style>
 </head>
 <body>
   <!--this page is gonna be replaced by /js/buildDEPdialogue.js when the site is built-->
