deltarune reference fix and variable line breaking feature

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -19,7 +19,7 @@
       article {
         white-space: wrap;
       }
-      article br {
+      article br:not([end]) {
         display: none;
       }
     }
