small comment about where to find the source

--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content="https://spax.zone/images/faces/yoki/Neutral.png" type="image/png">
   <link rel="icon" href="/images/faces/yoki/Neutral.png">
   <link rel="stylesheet" href="/css/experimental.css" type="text/css">
+  <!-- hey! if you wanna see how this site gets built, check out spax.zone/js/buildDEPdialogue.js -->
   <style>
     article {
       white-space: nowrap;
