sitelist update for all dialogue

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -40,6 +40,11 @@
     </article>
     -->
     <article>
+      <a href="./DEPalldialogue.html">(SPOILERS) All DEP Dialogue</a><br>
+      All Dweller's Empty Path dialogue from the game! Duplicates are removed.<br>
+      Spoilers ahead! Please play the game first.
+    </article>
+    <article>
       <a href="./alldepfaces.html">All DEP Character Faces</a><br>
       All Dweller's Empty Path faces that are supported on this site! Excluding custom ones.
     </article>
