one last type="short" thing

--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -74,7 +74,7 @@
       <span class="dnd-gray">Gray</span> = Most likely sleeping
       <br>
     </article>
-    <article>
+    <article type="short">
       (<a href="main">Click here</a> to go back to the main page!)
     </article>
     <!--
@@ -85,7 +85,7 @@
     <article who="spax" emotion="worried" id="date">
       This text should be replaced by the js. If you're seeing this, it means that my code is broken :(
     </div>
-    <article>
+    <article type="short">
       (And <a href="main">click here</a> to go back to the main page!)
     </article>
     <article id="debug"></article>
