tweak to the main page text

--- a/html/nahua-ref-sheet.html
+++ b/html/nahua-ref-sheet.html
@@ -85,7 +85,7 @@
       Last updated: August 15th, 2024<br>
     </article>
     <article type="short">
-      (And <a href="./index.html">click here</a> to go to the main page!)
+      (And <a href="./index.html">click here</a> to see the main page!)
     </article>
     <script>
       async function writeClipboardText(text) {
