--- a/tests/djmax/index.html
+++ b/tests/djmax/index.html
@@ -12,18 +12,18 @@
 <body>
   <h1>Random (Eligible) DJMax Song Generator</h1>
   <h2>For moD Jam MAX</h2>
-  <button onclick="javascript:randomSong()">gimme gimme</button>
+  <button onclick="javascript:randomSong()" id="gimme">gimme gimme</button>
   <div id="yeag">
     <a id="title"></a>
     <p id="artist"></p>
     <p id="game"></p>
     <p id="notes"></p>
+    <audio></audio>
   </div>
   <footer>
     more options to come<br>
     <a href="https://docs.google.com/spreadsheets/d/1FUUZuo1XvO-JkCSujy6Ml06QoLi-7o8g7rFkpcYsn9w/view">see the spreadsheet</a><br>
-    <!--audio embeds generated with <a href="https://cobalt.tools">cobalt.tools</a>' public api-->
-    audio embeds coming soon
+    audio embeds generated with <a href="https://cobalt.tools">cobalt.tools</a>' public api
   </footer>
 <script lang="javascript" src="./script.js"></script>
 </body>
