styling addendum and better description

--- a/tests/djmax/index.html
+++ b/tests/djmax/index.html
@@ -5,7 +5,7 @@
   <title>Random (Eligible) DJMax Song Generator</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Press it if you dare">
+  <meta name="description" content="small tool for moD Jam MAX">
   <link rel="icon" href="/images/misc/horse.png">
   <link rel="stylesheet" href="./styles.css">
 </head>
@@ -21,7 +21,7 @@
     <audio></audio>
   </div>
   <footer>
-    more options to come<br>
+    more options to come (and styling)<br>
     <a href="https://docs.google.com/spreadsheets/d/1FUUZuo1XvO-JkCSujy6Ml06QoLi-7o8g7rFkpcYsn9w/view">see the spreadsheet</a><br>
     audio embeds generated with <a href="https://cobalt.tools">cobalt.tools</a>' public api
   </footer>
