disable the button under certain circumstances

--- a/tests/djmax/index.html
+++ b/tests/djmax/index.html
@@ -22,7 +22,7 @@
     sory you need javascript &lt;/3
   </noscript>
   <p id="songs-selected"></p>
-  <button onclick="javascript:randomSong()" id="gimme">gimme gimme</button>
+  <button id="gimme" disabled>gimme gimme</button>
   <div id="yeag">
     <p id="title"></p>
     <p id="artist"></p>
