sitelist and redirects update

--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -15,71 +15,77 @@
     <link rel="stylesheet" href="/css/experimental.css" type="text/css">
   </head>
   <body>
+    <!--
+      hey! I see you're poking around in the devtools. there's not much to see other than
+      severely out of date pages, but you can go to them if you'd like!
+      these are also the ones that are notable enough to show off, so not everything's here.
+      if you *do* wanna see everything, check out the repo! https://spax.zone/repo :3
+    -->
     <article>
-      <a href="./index.html">Main Page</a><br>
+      <a href="./index.html" target="_blank">Main Page</a><br>
       The main page to the website. Right now it's a test placeholder but I'll put useful stuff on here eventually.
     </article>
-    <!-- commenting out since it is severely outdated. you can check it out if you've inspected the page lol
+    <!--
     <article>
-      <a href="./fanart.html">Character Art!</a><br>
+      <a href="./fanart.html" target="_blank">Character Art!</a><br>
       This is where I post all art of my characters! Please check out the cool artists who made them!<br>Sidenote: this page needs to get overhauled. It is severely out of date.
     </article>
     -->
     <article>
-      <a href="./nahua-ref-sheet.html">Nahua Ref Sheet</a><br>
+      <a href="./nahua-ref-sheet.html" target="_blank">Nahua Ref Sheet</a><br>
       The ref sheet of Nahua! Since I don't have an official ref sheet yet, I've picked a few of the most up-to-date pieces of her to display here.
     </article>
     <!--
     <article>
-      <a href="./isspaxatschool.html">Is Spax At School?</a><br>
+      <a href="./isspaxatschool.html" target="_blank">Is Spax At School?</a><br>
       This page uses JavaScript to see my schedule and update the text box to state whether I'm currently at school or not. Finally works!
     </article>
     <article>
-      <a href="./changelog.html">Changelog</a><br>
+      <a href="./changelog.html" target="_blank">Changelog</a><br>
       The manually edited changelog for the site. Currently being updated every day I make major changes on the site so that I don't regret not documenting it in the future. (I really need to update this.)
     </article>
     -->
     <article>
-      <a href="./DEPalldialogue.html">(SPOILERS) All DEP Dialogue</a><br>
+      <a href="./DEPalldialogue.html" target="_blank">(SPOILERS) All DEP Dialogue</a><br>
       All Dweller's Empty Path dialogue from the game! Duplicates are removed.<br>
-      Spoilers ahead! Please play the game first.
+      Spoilers ahead! Please <a href="https://tuyoki.itch.io/dwellers-empty-path" target="_blank">play the game first</a>.
     </article>
     <article>
-      <a href="./alldepfaces.html">All DEP Character Faces</a><br>
+      <a href="./alldepfaces.html" target="_blank">All DEP Character Faces</a><br>
       All Dweller's Empty Path faces that are supported on this site! Excluding custom ones.
     </article>
     <article>
-      <a href="./allspaxfaces.html">All Spax Faces</a><br>
+      <a href="./allspaxfaces.html" target="_blank">All Spax Faces</a><br>
       When originally making this site and testing the text box functionality, I went a little too far with a gag and ended up making 14 sprites for my axolotl character. I only ended up using two of them but in this site, you can see all the expressions I made for them! (I spent like two hours on them) <s>(dm me on discord if you wanna redo them for me)</s><br>
-      2024 update: these are being redone by <a href="https://ko-fi.com/ouchyzapgun">ouchyzapgun</a>!
+      2024 update: these are being redone by <a href="https://ko-fi.com/ouchyzapgun" target="_blank">ouchyzapgun</a>!
     </article>
     <!--
     <article>
-      <a href="./plannedchanges.html">Planned Changes</a><br>
+      <a href="./plannedchanges.html" target="_blank">Planned Changes</a><br>
       Here I'll try to do weekly updates stating what I want to change about this site. Just to get my ideas down and so viewers can see them. But yea enjoy my emotional rants here. (I really need to update this too.)
     </article>
     <article>
-      <a href="./MojoArrowAdvice.html">Mojo's Arrow Advice</a><br>
+      <a href="./MojoArrowAdvice.html" target="_blank">Mojo's Arrow Advice</a><br>
       This is my Create project that I made for my AP Computer Science Principles class! This program is not endorsed by BrotherMojo at all by the way.
     </article>
     -->
     <article>
-      <a href="/tests/horse.html">The Horse Button™</a><br>
+      <a href="/tests/horse.html" target="_blank">The Horse Button™</a><br>
       The Horse Button™ takes you to a random registered .horse domain.<br>
       THE LIST IS NOT FILTERED FOR DANGEROUS CONTENT. CLICK AT YOUR OWN RISK.<br>
       Originally made in about an hour.
     </article>
     <article>
-      <a href="/tests/ooo.html">.ooo explorer</a><br>
+      <a href="/tests/ooo.html" target="_blank">.ooo explorer</a><br>
       Explore all sites that have "o" as the only character in the url! Sorry if this one doesn't stay up-to-date.
     </article>
     <article>
-      <a href="/tests/animal-gender-bodypart/index.html">Animal Gender Bodypart</a><br>
-      A fun username generator based on <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam">this</a> chost.
+      <a href="/tests/animal-gender-bodypart/index.html" target="_blank">Animal Gender Bodypart</a><br>
+      A fun username generator based on <a href="https://cohost.org/bethposting/post/6065965-cohost-users-who-cam" target="_blank">this</a> chost.
     </article>
     <article>
-      <a href="./sitelist.html">Site List</a><br>
-      This page right here! Déjà vu much?
+      <a href="./sitelist.html" target="_blank">Site List</a><br>
+      This page right here!
     </article>
   </body>
 </html>
