--- a/tests/djmax/index.html
+++ b/tests/djmax/index.html
@@ -54,6 +54,72 @@
           <label for="not-eligible">Not Eligible</label>
         </div>
       </fieldset>
+      <fieldset id="games-include">
+        <legend>Games to include:</legend>
+        <div>
+          <input type="checkbox" name="all" id="all" checked="checked">
+          <label for="all">All</label>
+        </div>
+        <hr>
+        <div id="buildbelowme"></div>
+        <div>
+          <input type="checkbox" name="djmax-respect-v" checked="checked">
+          <label for="djmax-respect-v">DJMAX Respect V</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-portable-1" checked="checked">
+          <label for="djmax-portable-1">DJMAX Portable 1</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-portable-2" checked="checked">
+          <label for="djmax-portable-2">DJMAX Portable 2</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-portable-3" checked="checked">
+          <label for="djmax-portable-3">DJMAX Portable 3</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-clazziquai" checked="checked">
+          <label for="djmax-clazziquai">DJMAX Clazziquai</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-trilogy" checked="checked">
+          <label for="djmax-trilogy">DJMAX Trilogy</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-black-square" checked="checked">
+          <label for="djmax-black-square">DJMAX Black Square</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-technika" checked="checked">
+          <label for="djmax-technika">DJMAX Technika</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-technika-2" checked="checked">
+          <label for="djmax-technika-2">DJMAX Technika 2</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-technika-3" checked="checked">
+          <label for="djmax-technika-3">DJMAX Technika 3</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-technika-tune" checked="checked">
+          <label for="djmax-technika-tune">DJMAX Technika Tune</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-technika-q" checked="checked">
+          <label for="djmax-technika-q">DJMAX Technika Q</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-online" checked="checked">
+          <label for="djmax-online">DJMAX Online</label>
+        </div>
+        <div>
+          <input type="checkbox" name="djmax-ray" checked="checked">
+          <label for="djmax-ray">DJMAX RAY</label>
+        </div>
+        <div id="buildaboveme"></div>
+      </fieldset>
       <fieldset id="miscellaneous">
         <legend>Misc:</legend>
         <div>
@@ -68,9 +134,9 @@
     </div>
   </main>
   <footer>
-    styling by <a href="https://marbelynrye.000.pe/">marbelynrye</a> and Spax<br>
-    <a href="https://docs.google.com/spreadsheets/d/1FUUZuo1XvO-JkCSujy6Ml06QoLi-7o8g7rFkpcYsn9w/view">see the spreadsheet</a><br>
-    audio embeds generated with <a href="https://cobalt.tools/">cobalt.tools</a>' public api
+    styling by <a href="https://marbelynrye.000.pe/" target="_blank">marbelynrye</a> and <a href="https://spax.zone/" target="_blank">Spax</a><br>
+    <a href="https://docs.google.com/spreadsheets/d/1FUUZuo1XvO-JkCSujy6Ml06QoLi-7o8g7rFkpcYsn9w/view" target="_blank">see the spreadsheet</a><br>
+    audio embeds generated with <a href="https://cobalt.tools/" target="_blank">cobalt.tools</a>' public api
   </footer>
 <script lang="javascript" src="./script.js"></script>
 </body>
