less repetitive code in some sections and options not updating hotfix

--- a/tests/djmax/index.html
+++ b/tests/djmax/index.html
@@ -16,7 +16,7 @@
   <header>
     <h1>Random (Eligible) DJMax Song Generator</h1>
     <h2>For moD Jam MAX</h2>
-    <p id="songs-selected"></p>
+    <p>Songs selected: <span id="songs-selected"></span></p>
   </header>
   <noscript>
     <style>
