button and webring update

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,36 @@
     True...
   </article>
   <article who="spax" emotion="happy">
-    But keep an eye out for some new changes in the next few weeks!
+    But keep an eye out for some new changes!
+  </article>
+  <article who="spax" emotion="smirk">
+    Speaking of...
+  </article>
+  <article type="webring">
+    part of the <span title="man, computers are incredible">m,cai</span> webring<br><br>
+    <a href="https://coolstation.online/">back</a> <a href="https://terezi.pyrope.net/ring">index</a> <a href="https://terezi.pyrope.net/">next</a>
+  </article>
+  <!--<article type="buttons">
+    <a href="https://cyber.dabamos.de/88x31/"><img alt="88x31 buttons" src="https://cyber.dabamos.de/88x31/88x31.gif"></a>
+    <a href="https://web.archive.org/web/20141027160015/http://avdol.co.vu/post/91095908541"><img alt="graphic design is my passion" src="https://cyber.dabamos.de/88x31/graphicdesign.gif"></a>
+    <a href="https://yugoslavia.best/"><img alt="yugoslavia" src="https://cyber.dabamos.de/88x31/blinchik.gif"></a>
+    <a href="https://yugoslavia.best"><img alt="don't click here" src="https://cyber.dabamos.de/88x31/noclick.gif"></a>
+    since im commenting this out im thinking of adding some other buttons soon. like ones that dont exist currently
+    - cobalt.tools
+    - hosted by cloudflare
+    - glumbocoin (might already exist?)
+    - dweller's empty path / escaped chasm
+    also add the "i was on cohost!" one
+    also do some digging on friends profiles and display those here too
+    also also maybe make a custom replacable element so I don't have to copypaste this on every page I want it to be on?
+  </article>-->
+  <article type="center">
+    [buttons coming soon]
+  </article>
+  <article who="spax" emotion="blush">
+    Add my button to your site!<br>
+    <a href="https://spax.zone/"><img src="https://spax.zone/images/buttons/button.gif"></a>
+    <textarea readonly>&lt;a href="https://spax.zone/"&gt;&lt;img src="https://spax.zone/images/buttons/button.gif"&gt;&lt;/a&gt;</textarea>
   </article>
 </body>
 </html>
